--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,9 +7,24 @@
 header {
   margin: 20px auto;
   width: 600px;
-  height: 80px;
+  height: 70px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
+}
+nav {
+  margin: 0 auto;
+  width: 600px;
+  height: 35px;
+  padding: 0px 20px 20px 20px;
+  border: 1px dotted black;
+}
+nav ul {
+  margin: 0;
+  padding: 15px 0;
+}
+nav ul li {
+  display: inline-block;
+  padding-right: 25px;
 }
 .container {
   margin: 20px auto;
@@ -23,11 +38,6 @@ header {
 .right {
   float: right;
 }
-ul.nav {
-  padding: 20px 0;
-}
-ul.nav li {
-  display: inline-block;
-  padding-right: 25px;
-}
+
+
 
